Practica-Kubernetes/mstream/mstream.sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mstream-service
  labels:
    app: mstream-service
spec:
  ports:
  - port: 3000
    name: mstream-port
  #clusterIP: None
  selector:
    app: mstream-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mstream-app
spec:
  selector:
    matchLabels:
      app: mstream-app 
  serviceName: "mstream-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: mstream-app
    spec:
      containers:
      - name: mstream-app
        image: lscr.io/linuxserver/mstream:latest
        ports:
        - containerPort: 3000
          name: mstream-port
        volumeMounts:
        - name: config
          mountPath: /config
        - name: music
          mountPath: /music
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: music
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
